--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -12,8 +12,7 @@
     position: fixed;
     left: 9em;
     top: 4em;
-    z-index: 10;
-
+    z-index: 100;
   }
 
   .option-2 {
@@ -24,7 +23,7 @@
     position: fixed;
     top: 9em;
     left: 4em;
-    z-index: 10;
+    z-index: 100;
   }
 
   .option-3 {
@@ -35,25 +34,6 @@
     position: fixed;
     top: 0em;
     left: 10em;
-  }
-
-  .signed-in-option-1 {
-    font-family: $headers-font;
-    font-size: 1.5em;
-    color: $black;
-    text-decoration: none;
-    position: fixed;
-    left: 9em;
-    top: 2em;
-  }
-
-  .signed-in-option-2 {
-    font-family: $headers-font;
-    font-size: 1.5em;
-    color: $black;
-    text-decoration: none;
-    position: fixed;
-    top: 5.5em;
-    left: 7em;
+    z-index: 100;
   }
 }
